@@ -34,3 +34,8 @@ public class TypeWithFunkyStuff
 
 	int[] z = new int[] {1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16};
 }
+
+public enum Foo
+{
+	A,B,C
+}
